ajustes das dependencias

--- a/littlebot_control/CMakeLists.txt
+++ b/littlebot_control/CMakeLists.txt
@@ -3,7 +3,7 @@ project(littlebot_control)
 
 find_package(catkin REQUIRED)
 
-catkin_package()
+catkin_package(CATKIN_DEPENDS controller_manager diff_drive_controller)
 
 install(DIRECTORY config
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
