--- a/littlebot_control/config/littlebot_control.yaml
+++ b/littlebot_control/config/littlebot_control.yaml
@@ -14,7 +14,7 @@ littlebot_diff_controller:
   wheel_radius: 0.02614
   
   cmd_vel_timeout: 0.25
-  enable_odom_tf: true
+  enable_odom_tf: false
   
   pose_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.03]
   twist_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.03]
