--- a/littlebot_navigation/config/costmap_common.yaml
+++ b/littlebot_navigation/config/costmap_common.yaml
@@ -8,8 +8,8 @@ transform_tolerance: 0.5
 
 resolution: 0.05
 
-obstacle_range: 2.0
-raytrace_range: 2.3
+obstacle_range: 5
+raytrace_range: 6
 
 #layer definitions (for more information http://wiki.ros.org/navigation/Tutorials/RobotSetup)
 static:
@@ -21,7 +21,7 @@ obstacles_sonar:
     no_readings_timeout: 1.0
     clear_threshold: 0.1
     mark_threshold: 0.5
-    
+    clear_on_max_reading: true    
 
 inflation:
-    inflation_radius: 1
+    inflation_radius: 0.3
