--- a/littlebot_description/package.xml
+++ b/littlebot_description/package.xml
@@ -15,6 +15,7 @@
   <run_depend>joint_state_publisher</run_depend>
   <run_depend>robot_state_publisher</run_depend>
   <run_depend>rviz</run_depend>
+  <run_depend>joint_state_publisher_gui</run_depend>
 
   <export>
   </export>
