launch robot model viwer

--- a/littlebot_description/CMakeLists.txt
+++ b/littlebot_description/CMakeLists.txt
@@ -1,15 +1,17 @@
-cmake_minimum_required(VERSION 2.8.3)
-project(littlebot_description)
-
-find_package(catkin REQUIRED)
-
-catkin_package()
-
-install(DIRECTORY launch
-  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
-
-install(DIRECTORY meshes
-  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
-
-install(DIRECTORY urdf
-  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
+  cmake_minimum_required(VERSION 3.5)
+  project(littlebot_description)
+  
+  find_package(ament_cmake REQUIRED)
+  
+  install(
+    DIRECTORY launch urdf meshes rviz
+    DESTINATION share/${PROJECT_NAME}
+  )
+  
+  if(BUILD_TESTING)
+    find_package(ament_lint_auto REQUIRED)
+    ament_lint_auto_find_test_dependencies()
+  endif()
+  
+  ament_package()
+  
