--- a/littlebot/CMakeLists.txt
+++ b/littlebot/CMakeLists.txt
@@ -1,6 +1,4 @@
 
 cmake_minimum_required(VERSION 2.8.3)
 project(littlebot)
-find_package(catkin REQUIRED)
-
-catkin_metapackage()
+find_package(ament_cmake REQUIRED)
