--- a/littlebot/package.xml
+++ b/littlebot/package.xml
@@ -1,31 +1,19 @@
 <?xml version="1.0"?>
-<package>
+<package format="3">
+
   <name>littlebot</name>
   <version>0.0.0</version>
-  <description>The littlebot_control package</description>
+  <description>The littlebot metapackage</description>
 
+  <author email="nestor-dp@hotmail.com">Nestor D. Pereira Neto</author>
   <maintainer email="nestor-dp@hotmail.com">Nestor D. Pereira Neto</maintainer>
 
   <license>BSD</license>
 
-  <url type="website">http://http://gazebosim.org/w/index.php?title=Tutorials/1.9/Using_A_URDF_In_Gazebo</url>
-  <url type="bugtracker">https://github.com/osrf/gazebo_ros_demos/issues</url>
-  <url type="repository">https://github.com/osrf/gazebo_ros_demos</url>
-
-  <author email="nestor-dp@hotmail.com">Nestor D. Pereira Neto</author>
-
-  <buildtool_depend>catkin</buildtool_depend>
-
- <!--
-  <run_depend>controller_manager</run_depend>
-  <run_depend>joint_state_controller</run_depend>
-  <run_depend>robot_state_publisher</run_depend>
-  <run_depend>diff_drive_controller</run_depend>
--->
-
-  <run_depend>rqt_gui</run_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
   <export>
+    <build_type>ament_cmake</build_type>
   </export>
 
 </package>
