--- a/littlebot_description/package.xml
+++ b/littlebot_description/package.xml
@@ -1,22 +1,27 @@
 <?xml version="1.0"?>
-<package>
+<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="3">
+
   <name>littlebot_description</name>
   <version>0.0.0</version>
   <description>The littlebot_description package</description>
 
-  <maintainer email="nestor-dp@hotmail.com">Nestor D. Pereira Neto</maintainer>
-
+  <author email="nestor-dp@hotmail.com">Nestor D. Pereira Neto</author>
+  <maintainer email="nestor-dp@hotmail.com">Nestor Pereira Neto</maintainer>
   <license>BSD</license>
 
-  <author email="nestor-dp@hotmail.com">Nestor D. Pereira Neto</author>
+  <buildtool_depend>ament_cmake</buildtool_depend>
+  
+  <exec_depend>joint_state_publisher</exec_depend>
+  <exec_depend>joint_state_publisher_gui</exec_depend>
+  <exec_depend>robot_state_publisher</exec_depend>
+  <exec_depend>rviz2</exec_depend>
+  <exec_depend>xacro</exec_depend>
 
-  <buildtool_depend>catkin</buildtool_depend>
-
-  <run_depend>joint_state_publisher</run_depend>
-  <run_depend>robot_state_publisher</run_depend>
-  <run_depend>rviz</run_depend>
-  <run_depend>joint_state_publisher_gui</run_depend>
+  <test_depend>ament_lint_auto</test_depend>
 
   <export>
+    <build_type>ament_cmake</build_type>
   </export>
+
 </package>
