--- a/littlebot_localization/config/littlebot_localization.yaml
+++ b/littlebot_localization/config/littlebot_localization.yaml
@@ -18,7 +18,7 @@ ekf_node:
     odom0_differential: false
     odom0_queue_size: 10
 
-    imu0: imu/data
+    imu0: imu/data_raw
     imu0_config: [false, false, false,
                   true, true, true,
                   false, false, false,
@@ -27,4 +27,3 @@ ekf_node:
     imu0_differential: true
     imu0_queue_size: 10
     imu0_remove_gravitational_acceleration: true
-    
