--- a/littlebot_localization/config/littlebot_localization.yaml
+++ b/littlebot_localization/config/littlebot_localization.yaml
@@ -8,7 +8,6 @@ ekf_node:
 
     frequency: 50.0
 
-    # odom0: husky_velocity_controller/odom
     odom0: odom
     odom0_config: [false, false, false,
                   false, false, false,
@@ -18,12 +17,12 @@ ekf_node:
     odom0_differential: false
     odom0_queue_size: 10
 
-    imu0: imu/data_raw
-    imu0_config: [false, false, false,
-                  true, true, true,
-                  false, false, false,
-                  true, true, true,
-                  false, false, false]
-    imu0_differential: true
-    imu0_queue_size: 10
-    imu0_remove_gravitational_acceleration: true
+    # imu0: imu/data_raw
+    # imu0_config: [false, false, false,
+    #               true, true, true,
+    #               false, false, false,
+    #               true, true, true,
+    #               false, false, false]
+    # imu0_differential: true
+    # imu0_queue_size: 10
+    # imu0_remove_gravitational_acceleration: true
