--- a/littlebot_base/CMakeLists.txt
+++ b/littlebot_base/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(husky_base)
+project(littlebot_base)
 
 # Default to C++14
 if(NOT CMAKE_CXX_STANDARD)
@@ -11,84 +11,44 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
 endif()
 
 find_package(ament_cmake REQUIRED)
-
-find_package(controller_interface REQUIRED)
-find_package(controller_manager REQUIRED)
-find_package(controller_manager_msgs REQUIRED)
-find_package(hardware_interface REQUIRED)
-find_package(pluginlib REQUIRED)
 find_package(rclcpp REQUIRED)
-
-find_package(geometry_msgs REQUIRED)
-find_package(husky_msgs REQUIRED)
-find_package(nav_msgs REQUIRED)
-find_package(sensor_msgs REQUIRED)
+find_package(rclcpp_components REQUIRED)
 find_package(std_msgs REQUIRED)
-find_package(std_srvs REQUIRED)
-find_package(tf2 REQUIRED)
-find_package(tf2_ros REQUIRED)
+
+include_directories(include)
 
 
-## COMPILE
-add_library(
-  husky_hardware
-  SHARED
-  src/husky_hardware.cpp
-  src/horizon_legacy_wrapper.cpp
-  src/horizon_legacy/crc.cpp
-  src/horizon_legacy/Logger.cpp
-  src/horizon_legacy/Message.cpp
-  src/horizon_legacy/Message_data.cpp
-  src/horizon_legacy/Message_request.cpp
-  src/horizon_legacy/Message_cmd.cpp
-  src/horizon_legacy/Transport.cpp
-  src/horizon_legacy/Number.cpp
-  src/horizon_legacy/linux_serial.cpp
-)
-
-target_include_directories(
-  husky_hardware
-  PRIVATE
-  include
-)
-
-ament_target_dependencies(
-  husky_hardware
-  hardware_interface
-  pluginlib
-  rclcpp
-)
+# create ament index resource which references the libraries in the binary dir
+set(node_plugins "")
 
 
-pluginlib_export_plugin_description_file(hardware_interface husky_hardware.xml)
+add_library(littlebot_listener SHARED
+  src/littlebot_listener.cpp)
 
-# INSTALL
-install(
-  TARGETS husky_hardware
+target_compile_definitions(littlebot_listener
+  PRIVATE "DEMO_NODES_CPP_BUILDING_DLL")
+
+ament_target_dependencies(littlebot_listener
+  "rclcpp"
+  "rclcpp_components"
+  "std_msgs")
+
+rclcpp_components_register_nodes(littlebot_listener "littlebot_base::Listener")
+set(node_plugins "${node_plugins}littlebot_base::Listener;$<TARGET_FILE:littlebot_listener>\n")
+
+
+install(TARGETS
+  littlebot_listener
+  ARCHIVE DESTINATION lib
   LIBRARY DESTINATION lib
-  RUNTIME DESTINATION lib/${PROJECT_NAME}
-)
-install(
-  DIRECTORY include/
-  DESTINATION include
-)
-
-install(DIRECTORY launch
-  DESTINATION share/${PROJECT_NAME}
-)
+  RUNTIME DESTINATION bin)
 
 
-## EXPORTS
-ament_export_include_directories(
-  include
-)
-ament_export_libraries(
-  husky_hardware
-)
-ament_export_dependencies(
-  hardware_interface
-  pluginlib
-  rclcpp
+
+# Install launch files.
+install(DIRECTORY
+  launch
+  DESTINATION share/${PROJECT_NAME}/
 )
 
 ament_package()
