--- a/littlebot_description/CMakeLists.txt
+++ b/littlebot_description/CMakeLists.txt
@@ -4,7 +4,7 @@
   find_package(ament_cmake REQUIRED)
   
   install(
-    DIRECTORY gazebo launch meshes rviz urdf
+    DIRECTORY config gazebo launch meshes ros2_control urdf
     DESTINATION share/${PROJECT_NAME}
   )
   
