--- a/littlebot_control/config/control.yaml
+++ b/littlebot_control/config/control.yaml
@@ -32,7 +32,7 @@ littlebot_velocity_controller:
 
     cmd_vel_timeout: 0.5
     #publish_limited_velocity: true
-    use_stamped_vel: false
+    use_stamped_vel: true
     #velocity_rolling_window_size: 10
 
     # Preserve turning radius when limiting speed/acceleration/jerk
