Added base_footprint and base_link to urdf file

--- a/littlebot_localization/config/littlebot_localization.yaml
+++ b/littlebot_localization/config/littlebot_localization.yaml
@@ -1,7 +1,8 @@
 ekf_node:
   ros__parameters:
+    map_frame: map
     odom_frame: odom
-    base_link_frame: base_link
+    base_link_frame: base_footprint
     world_frame: odom
 
     two_d_mode: true
