Adjust tf frames to REP105

--- a/littlebot_localization/config/littlebot_localization.yaml
+++ b/littlebot_localization/config/littlebot_localization.yaml
@@ -1,8 +1,7 @@
 ekf_node:
   ros__parameters:
-    map_frame: map
     odom_frame: odom
-    base_link_frame: base_footprint
+    base_link_frame: base_link
     world_frame: odom
 
     two_d_mode: true
