--- a/littlebot_teleop/package.xml
+++ b/littlebot_teleop/package.xml
@@ -18,6 +18,8 @@
   <depend>geometry_msgs</depend>
   <depend>sensor_msgs</depend>
 
+  <exec_depend>joystick_drivers</exec_depend>
+
   <export>
     <build_type>ament_cmake</build_type>
   </export>
