Fixed odom to base_link translation error

--- a/littlebot_localization/config/littlebot_localization.yaml
+++ b/littlebot_localization/config/littlebot_localization.yaml
@@ -3,15 +3,15 @@ ekf_node:
     odom_frame: odom
     base_link_frame: base_link
     world_frame: odom
-
+    publish_tf: true
     two_d_mode: true
 
     frequency: 50.0
 
     odom0: odom
-    odom0_config: [false, false, false,
-                  false, false, false,
-                  true, true, true,
+    odom0_config: [true, true, false,
+                  false, false, true,
+                  true, true, false,
                   false, false, true,
                   false, false, false]
     odom0_differential: false
@@ -19,10 +19,10 @@ ekf_node:
 
     imu0: imu/data_raw
     imu0_config: [false, false, false,
-                  true, true, true,
                   false, false, false,
-                  true, true, true,
-                  false, false, false]
-    imu0_differential: true
+                  false, false, false,
+                  false, false, true,
+                  true, false, false]
+    imu0_differential: false
     imu0_queue_size: 10
     imu0_remove_gravitational_acceleration: true
