--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -3,7 +3,7 @@
 
 name: Code Quality
 run-name: ${{ github.repository }} is testing out GitHub Actions 🚀
-on: [push]
+on: [pull_request]
 jobs:
   cpplint:
     runs-on: ubuntu-20.04
