--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -22,6 +22,7 @@ jobs:
         run: pip install cpplint flake8
 
       - name: Lint with flake8
-        run: |
-          # stop the build if there are Python syntax errors or undefined names
-          flake8 
+        run: flake8
+      
+      - name: Lint with cpplint
+        run: cpplint --recursive .
