--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -3,26 +3,21 @@
 
 name: Code Quality
 run-name: Run Lint Checks
-on: [push, pull_request]
+on: [pull_request]
 jobs:
   cpplint:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
-
       - name: Set up Python 3.7
         uses: actions/setup-python@v3
         with:
           python-version: 3.7
-
       - name: Update pip
         run: python -m pip install --upgrade pip
-
       - name: Install dependencies
         run: pip install cpplint flake8
-
       - name: Lint with flake8
         run: flake8
-      
       - name: Lint with cpplint
         run: cpplint --recursive .
