--- a/littlebot_control/package.xml
+++ b/littlebot_control/package.xml
@@ -10,15 +10,17 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <depend>controller_manager</depend>
-  <depend>diff_drive_controller</depend>
-  <depend>interactive_marker_twist_server</depend>
-  <depend>joint_state_broadcaster</depend>
-  <depend>joint_trajectory_controller</depend>
-  <depend>joy</depend>
-  <depend>robot_state_publisher</depend>
-  <depend>teleop_twist_joy</depend>
-  <depend>twist_mux</depend>
+  <!-- <depend>controller_manager</depend> -->
+  <!-- <depend>diff_drive_controller</depend> -->
+  <depend>ros2_control</depend>
+  <depend>ros2_controllers</depend>
+  <!-- <depend>interactive_marker_twist_server</depend> -->
+  <!-- <depend>joint_state_broadcaster</depend> -->
+  <!-- <depend>joint_trajectory_controller</depend> -->
+  <!-- <depend>joy</depend> -->
+  <!-- <depend>robot_state_publisher</depend> -->
+  <!-- <depend>teleop_twist_joy</depend> -->
+  <!-- <depend>twist_mux</depend> -->
 
   <export>
     <build_type>ament_cmake</build_type>
