--- a/littlebot_control/CMakeLists.txt
+++ b/littlebot_control/CMakeLists.txt
@@ -5,7 +5,7 @@ project(littlebot_control)
 find_package(ament_cmake REQUIRED)
 
 
-install(DIRECTORY config launch
+install(DIRECTORY config launch rviz
   DESTINATION share/${PROJECT_NAME}
 )
 
