--- a/littlebot_base/CMakeLists.txt
+++ b/littlebot_base/CMakeLists.txt
@@ -121,6 +121,7 @@ if(BUILD_TESTING)
     test/test_main.cpp
     test/test_littlebot_driver.cpp
     test/test_littlebot_hardware_component.cpp
+    test/test_serial_port.cpp
     src/littlebot_driver.cpp
     src/serial_port.cpp
     ${PROTO_SRCS}
